added a settings file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ file(GLOB spectre_core_sources
     src/geometry/*.cpp
     src/utility/*.cpp)
 file(GLOB spectre_core_headers
+    src/settings.h
     src/geometry/*.hpp
     src/utility/*.hpp)
 include_directories(src)
