Utility functions, first draft of settings and its validator

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ file(GLOB spectre_core_sources
     src/utility/*.cpp)
 file(GLOB spectre_core_headers
     src/settings.h
+    src/validator.h
     src/geometry/*.hpp
     src/utility/*.hpp)
 include_directories(src)
