--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,14 +2,17 @@ cmake_minimum_required(VERSION 2.8)
 project(spectre-light)
 file(GLOB spectre_core_sources
     src/geometry/*.cpp
+    src/primitives/*.cpp
     src/utility/*.cpp)
 file(GLOB spectre_core_headers
     src/settings.h
     src/validator.h
     src/geometry/*.hpp
+    src/primitives/*.hpp
     src/utility/*.hpp)
 include_directories(src)
 include_directories(src/geometry)
+include_directories(src/primitives)
 include_directories(src/utility)
 find_package(Doxygen)
 
