Wrong directory, again

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,5 +10,5 @@ before_build:
     - cd c:\projects\spectre-light\build
     - cmake -G "Visual Studio 14 2015 Win64" ..
 build:
-    project: c:\projects\spectre-light\spectre-light.sln
+    project: c:\projects\spectre-light\build\spectre-light.sln
     parallel: true
