Fallback to cmake 2.8, different code to ensure c++11

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,11 @@
-cmake_minimum_required(VERSION 3.1) #required for CMAKE_CXX_STANDARD
+cmake_minimum_required(VERSION 2.8)
 project(spectre-light)
-set(CMAKE_CXX_STANDARD 11)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
+if(CMAKE_VERSION VERSION_LESS "3.1") #ensure c++11, not default if cxx is clang
+    set(CMAKE_CXX_FLAGS "--std=c++11 ${CMAKE_CXX_FLAGS}")
+else()
+    set(CMAKE_CXX_STANDARD 11)
+    set(CMAKE_CXX_STANDARD_REQUIRED ON)
+endif()
 file(GLOB spectre_core_sources
     src/geometry/*.cpp
     src/primitives/*.cpp
