--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,15 @@
 language: cpp
-os:
- - linux
- - osx
-compiler: 
- - gcc
- - clang
 script:
-    - mkdir -p build && cd build/ && cmake .. && cmake --build .
+ - mkdir -p build && cd build/ && cmake .. && cmake --build .
+matrix:
+    include:
+        - os: linux
+          dist: trusty
+          sudo: false
+          compiler: gcc
+        - os: linux
+          dist: trusty
+          sudo: false
+          compiler: clang
+        - os: osx
+          compiler: clang
