KdTree, class and build function draft

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,17 +5,20 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 file(GLOB spectre_core_sources
     src/geometry/*.cpp
     src/primitives/*.cpp
+    src/accelerators/*.cpp
     src/utility/*.cpp)
 file(GLOB spectre_core_headers
     src/settings.h
     src/validator.h
     src/geometry/*.hpp
     src/primitives/*.hpp
+    src/accelerators/*.hpp
     src/utility/*.hpp)
 include_directories(src)
 include_directories(src/geometry)
 include_directories(src/primitives)
 include_directories(src/utility)
+include_directories(src/accelerators)
 find_package(Doxygen)
 
 if(DOXYGEN_FOUND)
