CMake updated for cameras

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,8 @@ file(GLOB spectre_core_sources
     src/primitives/*.cpp
     src/accelerators/*.cpp
     src/samplers/*.cpp
-    src/utility/*.cpp)
+    src/utility/*.cpp
+    src/cameras/*.cpp)
 file(GLOB spectre_core_headers
     src/settings.h
     src/validator.h
@@ -16,18 +17,25 @@ file(GLOB spectre_core_headers
     src/primitives/*.hpp
     src/accelerators/*.hpp
     src/samplers/*.hpp
-    src/utility/*.hpp)
+    src/utility/*.hpp
+    src/cameras/*.hpp)
 include_directories(src)
 include_directories(src/geometry)
 include_directories(src/primitives)
 include_directories(src/utility)
 include_directories(src/accelerators)
 include_directories(src/samplers)
+include_directories(src/cameras)
 find_package(Doxygen)
 
 if(DOXYGEN_FOUND)
     configure_file(${CMAKE_CURRENT_SOURCE_DIR}/docs/Doxyfile ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile @ONLY)
     add_custom_target(doc ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile ${CMAKE_CURRENT_SOURCE_DIR}/src/ ${CMAKE_CURRENT_BINARY_DIR})
 endif(DOXYGEN_FOUND)
+
+find_package(ImageMagick)
+if(ImageMagick_FOUND)
+    add_definitions(-DIMAGEMAGICK_FOUND)
+endif()
 
 add_executable(spectre src/main.cpp ${spectre_core_sources})
