Very temp obj parser

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ file(GLOB spectre_core_sources
     src/utility/*.cpp
     src/cameras/*.cpp
     src/integrators/*.cpp
+        src/parsers/*.cpp
     src/materials/*.cpp)
 include_directories(src)
 find_package (Threads REQUIRED)
