Forgot to add target dependencies in CMakeLists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,3 +43,5 @@ add_executable(spectre-rgb src/main.cpp ${spectre_core_sources})
 target_link_libraries (spectre-rgb ${CMAKE_THREAD_LIBS_INIT})
 
 add_executable(spectre src/application_starter.cpp)
+add_dependencies(spectre spectre-full)
+add_dependencies(spectre spectre-rgb)
