Enforced float policy
No floats are raised to double to and then casted back to float after
the computation. Replaced also the default M_PI with a float version
called ONE_PI (to maintain consistency with TWO_PI and FOUR_PI)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 if(WIN32)
 else()
-    set(CMAKE_CXX_FLAGS_DEBUG "-O0 -pipe -g -DLOW_LEVEL_CHECKS -DDEBUG")
+    set(CMAKE_CXX_FLAGS_DEBUG "-O0 -pipe -g -Wall -Wextra -Wpedantic -Werror -Wdouble-promotion -D_LOW_LEVEL_CHECKS_ -DDEBUG")
     #no input coming from unstruted sources -> no need the stack protector hardening
     #funroll-loops is used for several functions inside the Spectrum class. Some of them are unrolled by hand, others are not (code becomes really unmantainable)
     set(CMAKE_CXX_FLAGS_RELEASE "-O3 -pipe -flto -march=native -mtune=native -funroll-loops -fno-stack-protector -DNDEBUG")
