--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: cpp
 script:
- - mkdir -p build && cd build/ && cmake .. && cmake --build .
+ - mkdir -p build && cd build/
+ - cmake -DCMAKE_BUILD_TYPE="Release" ..
+ - cmake --build .
 matrix:
     include:
         - os: linux
