--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.1 FATAL_ERROR)
-project(spectre-light CXX)
+project(spectre-light C CXX)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 if(MSVC)
-    set(CMAKE_CXX_FLAGS_DEBUG "/Wall /WX /DDEBUG")
+    set(CMAKE_CXX_FLAGS_DEBUG "/Wall /DDEBUG")
     set(CMAKE_CXX_FLAGS_RELEASE "/O2 /GR- /GS- /GL /Gw /Gy /MT /LTCG /w /DNDEBUG")
 else()
 set(CMAKE_CXX_FLAGS_DEBUG ${CMAKE_CXX_FLAGS_DEBUG} "-O0 -pipe -g -Wall -Wextra -Wpedantic -Werror -Wdouble-promotion -DDEBUG")
