Changed build matrix
Several changes, including build matrix (clang does not like -flto), a
warning that specifies some constraint for the current temp parser, and
the version of the renderer in the console

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,12 @@
 language: cpp
-script:
- - mkdir -p build && cd build/
- - cmake -DCMAKE_BUILD_TYPE="Release" ..
- - cmake --build .
-matrix:
+jobs:
     include:
-        - os: linux
+        - stage: compile
+          os: linux
           dist: trusty
           sudo: false
           compiler: gcc
-        - os: linux
-          dist: trusty
-          sudo: false
+          script: mkdir -p build && cd build/ && cmake -DCMAKE_BUILD_TYPE="Release" .. && cmake --build .
+          os: osx
           compiler: clang
-        - os: osx
-          compiler: clang
+          script: mkdir -p build && cd build/ && cmake -DCMAKE_BUILD_TYPE="Release" .. && cmake --build .
