--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,15 @@
 language: cpp
-script:
- - mkdir -p build && cd build/
- - cmake -DCMAKE_BUILD_TYPE="Release" ..
- - cmake --build .
-matrix:
+os:
+    - linux
+    - osx
+jobs:
     include:
-        - os: linux
-          dist: trusty
-          sudo: false
-          compiler: gcc
-        - os: osx
-          compiler: clang
-
+        - stage: compile
+          script: mkdir -p build && cd build/ && cmake -DCMAKE_BUILD_TYPE="Release" .. && cmake --build .
+        - stage: test
+          before_install: git clone https://github.com/google/googletest.git && cd googletest/ && mkdir -p build && cd build/ && cmake .. && sudo make install gtest && cd ../..
+          script: mkdir -p build && cd build/ && cmake -DCMAKE_BUILD_TYPE="Coverage" .. && make runTests && ./runTests && cd CMakeFiles/runTests.dir/src && find . -name '*.cpp.gcno' -execdir gcov -b {} \;
+          after_script: bash <(curl -s https://codecov.io/bash)
+matrix:
+    allow_failures:
+        - stage: test
