--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,5 +63,5 @@ if(GTEST_FOUND)
     endif(CMAKE_BUILD_TYPE STREQUAL "Coverage")
     include_directories(${GTEST_INCLUDE_DIRS})
     add_executable(runTests ${CMAKE_CURRENT_SOURCE_DIR}/tests/allTests.cxx ${spectre_core_sources})
-    target_link_libraries(runTests ${GTEST_BOTH_LIBRARIES})
+    target_link_libraries(runTests ${GTEST_BOTH_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
 endif(GTEST_FOUND)
