--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,8 @@ file(GLOB spectre_core_sources
     src/parsers/*.cpp
     src/materials/*.cpp)
 file(GLOB spectre_test_sources
-    tests/vec3_tests.cpp)
+    tests/vec3_tests.cpp
+    tests/normal_tests.cpp)
 include_directories(src)
 find_package (Threads REQUIRED)
 
