--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,8 @@ file(GLOB spectre_core_sources
     src/materials/*.cpp)
 file(GLOB spectre_test_sources
     tests/vec3_tests.cpp
-    tests/normal_tests.cpp)
+    tests/normal_tests.cpp
+    tests/ray_tests.cpp)
 include_directories(src)
 find_package (Threads REQUIRED)
 
