--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,8 @@
 language: cpp
+os:
+    - linux
+    - osx
 script: mkdir -p build && cd build/ && cmake -DCMAKE_BUILD_TYPE="Release" .. && cmake --build .
-matrix:
-    include:
-        - os: linux
-          dist: trusty
-          sudo: false
-          compiler: gcc
-        - os: osx
-          compiler: clang
 jobs:
     include:
         - stage: test
