Scene tests, fixed destructor and lights indexing
Also, removed -Wdouble-promotion from debug flags beacause the Coverage target
now uses the debug flags and in the tests there are a lot of promotions
to double. Will be readded in the next commit

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ if(MSVC)
     set(CMAKE_CXX_FLAGS_DEBUG "/Wall /DDEBUG")
     set(CMAKE_CXX_FLAGS_RELEASE "/O2 /GR- /GS- /GL /Gw /Gy /MT /LTCG /w /DNDEBUG")
 else()
-set(CMAKE_CXX_FLAGS_DEBUG ${CMAKE_CXX_FLAGS_DEBUG} "-O0 -pipe -g -Wall -Wextra -Wpedantic -Werror -Wdouble-promotion -DDEBUG")
+set(CMAKE_CXX_FLAGS_DEBUG "-O0 -pipe -fstack-protector -g -Wall -Wextra -Wpedantic -Werror -DDEBUG")
     set(CMAKE_CXX_FLAGS_RELEASE "-Ofast -pipe -flto -march=native -mtune=native -funroll-loops -fno-stack-protector -DNDEBUG")
 endif()
 
@@ -62,7 +62,7 @@ set(CMAKE_VERBOSE_MAKEFILE ON)
 find_package(GTest)
 if(GTEST_FOUND)
     if(CMAKE_BUILD_TYPE STREQUAL "Coverage")
-        set(CMAKE_CXX_FLAGS "-O0 -pipe -fprofile-arcs -ftest-coverage -DDEBUG -DTESTS")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS_DEBUG} -fprofile-arcs -ftest-coverage -DTESTS")
     endif(CMAKE_BUILD_TYPE STREQUAL "Coverage")
     include_directories(${GTEST_INCLUDE_DIRS})
     add_executable(runTests ${CMAKE_CURRENT_SOURCE_DIR}/tests/allTests.cxx ${spectre_core_sources} ${spectre_test_sources})
