Filters mean and stddev tests
Super bugged for now btw

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,9 +62,10 @@ set(CMAKE_VERBOSE_MAKEFILE ON)
 find_package(GTest)
 if(GTEST_FOUND)
     if(CMAKE_BUILD_TYPE STREQUAL "Coverage")
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS_DEBUG} -fprofile-arcs -ftest-coverage -DTESTS")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS_DEBUG} -fprofile-arcs -ftest-coverage")
     endif(CMAKE_BUILD_TYPE STREQUAL "Coverage")
     include_directories(${GTEST_INCLUDE_DIRS})
     add_executable(runTests ${CMAKE_CURRENT_SOURCE_DIR}/tests/allTests.cxx ${spectre_core_sources} ${spectre_test_sources})
     target_link_libraries(runTests ${GTEST_BOTH_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
+    set_target_properties(runTests PROPERTIES COMPILE_FLAGS " -DTESTS -DDEBUG")
 endif(GTEST_FOUND)
