Added command to generate filters distributions plots
If Gnuplot is installed, the target make distributions will generate
distributions plots for the filters

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ file(GLOB spectre_core_sources
 file(GLOB spectre_test_sources
     tests/*.cpp
     )
-file(GLOB spectre_distribution_sources
+file(GLOB spectre_distribution_filters
     tests/distributions/*.cpp
     src/samplers/*filter*.cpp
     )
@@ -72,6 +72,18 @@ if(GTEST_FOUND)
     add_executable(runTests ${CMAKE_CURRENT_SOURCE_DIR}/tests/allTests.cxx ${spectre_core_sources} ${spectre_test_sources})
     target_link_libraries(runTests ${GTEST_BOTH_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
     set_target_properties(runTests PROPERTIES COMPILE_FLAGS " -DTESTS -DDEBUG")
-
-    add_executable(distributionsPlots ${spectre_distribution_sources})
 endif(GTEST_FOUND)
+find_package(Gnuplot)
+if(GNUPLOT_FOUND)
+    add_executable(filters_data EXCLUDE_FROM_ALL ${spectre_distribution_filters})
+    add_custom_command(OUTPUT filters_distributions.pdf
+        DEPENDS filters_data
+        COMMAND filters_data ${CMAKE_CURRENT_BINARY_DIR}
+        COMMAND ${GNUPLOT_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/tests/distributions/filters_gnuplot.txt
+        COMMENT "Plotting filters distributions"
+        VERBATIM
+)
+
+add_custom_target(distributions 
+                  DEPENDS filters_distributions.pdf)
+endif(GNUPLOT_FOUND)
