--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,7 +70,7 @@ if(GTEST_FOUND)
     include_directories(${GTEST_INCLUDE_DIRS})
     add_executable(runTests EXCLUDE_FROM_ALL ${CMAKE_CURRENT_SOURCE_DIR}/tests/allTests.cxx ${spectre_core_sources} ${spectre_test_sources})
     target_link_libraries(runTests ${GTEST_BOTH_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
-    set_target_properties(runTests PROPERTIES COMPILE_FLAGS " -DTESTS -DDEBUG")
+    set_target_properties(runTests PROPERTIES COMPILE_FLAGS " -DTESTS -DDEBUG -DTEST_ASSETS=\\\"${CMAKE_CURRENT_SOURCE_DIR}/tests/assets/\\\"")
 endif(GTEST_FOUND)
 find_package(Gnuplot)
 if(GNUPLOT_FOUND)
