ImageMagick API: save generic RGB image (depth 8)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,9 +65,15 @@ if(IMAGEMAGICK_FOUND)
   set_property(SOURCE src/main.cpp APPEND_STRING PROPERTY COMPILE_FLAGS " -DIMAGEMAGICK=\\\"${ImageMagick_INCLUDE_DIRS}\\\"")
   set_property(SOURCE src/main.cpp APPEND_STRING PROPERTY COMPILE_FLAGS " -DMAGICKCORE_QUANTUM_DEPTH=16")
   set_property(SOURCE src/main.cpp APPEND_STRING PROPERTY COMPILE_FLAGS " -DMAGICKCORE_HDRI_ENABLE=1")
-    include_directories(${ImageMagick_INCLUDE_DIRS})
-    target_link_libraries(spectre-full ${ImageMagick_LIBRARIES})
-    target_link_libraries(spectre-rgb ${ImageMagick_LIBRARIES})
+  set_property(SOURCE src/utility/imageIO.cpp APPEND_STRING PROPERTY COMPILE_FLAGS " -DIMAGEMAGICK=\\\"${ImageMagick_INCLUDE_DIRS}\\\"")
+  set_property(SOURCE src/utility/imageIO.cpp APPEND_STRING PROPERTY COMPILE_FLAGS " -DMAGICKCORE_QUANTUM_DEPTH=16")
+  set_property(SOURCE src/utility/imageIO.cpp APPEND_STRING PROPERTY COMPILE_FLAGS " -DMAGICKCORE_HDRI_ENABLE=1")
+  set_property(SOURCE src/cameras/image_film.cpp APPEND_STRING PROPERTY COMPILE_FLAGS " -DIMAGEMAGICK=\\\"${ImageMagick_INCLUDE_DIRS}\\\"")
+  set_property(SOURCE src/cameras/image_film.cpp APPEND_STRING PROPERTY COMPILE_FLAGS " -DMAGICKCORE_QUANTUM_DEPTH=16")
+  set_property(SOURCE src/cameras/image_film.cpp APPEND_STRING PROPERTY COMPILE_FLAGS " -DMAGICKCORE_HDRI_ENABLE=1")
+  include_directories(${ImageMagick_INCLUDE_DIRS})
+  target_link_libraries(spectre-full ${ImageMagick_LIBRARIES})
+  target_link_libraries(spectre-rgb ${ImageMagick_LIBRARIES})
 endif(IMAGEMAGICK_FOUND)
 set(CMAKE_VERBOSE_MAKEFILE ON)
 
