--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ if(MSVC)
     set(CMAKE_CXX_FLAGS_DEBUG "/Wall /DDEBUG")
     set(CMAKE_CXX_FLAGS_RELEASE "/O2 /GR- /GS- /GL /Gw /Gy /MT /LTCG /w /DNDEBUG")
 else()
-set(CMAKE_CXX_FLAGS_DEBUG "-O0 -pipe -fstack-protector -g -Wall -Wextra -Wpedantic -Werror -DDEBUG")
+set(CMAKE_CXX_FLAGS_DEBUG "-O0 -pipe -fstack-protector -g -Wall -Wextra -Wpedantic -DDEBUG")
     set(CMAKE_CXX_FLAGS_RELEASE "-Ofast -pipe -flto -march=native -mtune=native -funroll-loops -fno-stack-protector -DNDEBUG")
 endif()
 
@@ -61,20 +61,20 @@ add_dependencies(spectre spectre-full)
 add_dependencies(spectre spectre-rgb)
 
 find_package(ImageMagick COMPONENTS Magick++)
-if(IMAGEMAGICK_FOUND)
-  set_property(SOURCE src/main.cpp APPEND_STRING PROPERTY COMPILE_FLAGS " -DIMAGEMAGICK=\\\"${ImageMagick_INCLUDE_DIRS}\\\"")
+if(IMAGEMAGICK_Magick++_FOUND)
+  set_property(SOURCE src/main.cpp APPEND_STRING PROPERTY COMPILE_FLAGS " -DIMAGEMAGICK=\\\"${ImageMagick_Magick++_INCLUDE_DIRS}\\\"")
   set_property(SOURCE src/main.cpp APPEND_STRING PROPERTY COMPILE_FLAGS " -DMAGICKCORE_QUANTUM_DEPTH=16")
   set_property(SOURCE src/main.cpp APPEND_STRING PROPERTY COMPILE_FLAGS " -DMAGICKCORE_HDRI_ENABLE=1")
-  set_property(SOURCE src/utility/imageIO.cpp APPEND_STRING PROPERTY COMPILE_FLAGS " -DIMAGEMAGICK=\\\"${ImageMagick_INCLUDE_DIRS}\\\"")
+  set_property(SOURCE src/utility/imageIO.cpp APPEND_STRING PROPERTY COMPILE_FLAGS " -DIMAGEMAGICK=\\\"${ImageMagick_Magick++_INCLUDE_DIRS}\\\"")
   set_property(SOURCE src/utility/imageIO.cpp APPEND_STRING PROPERTY COMPILE_FLAGS " -DMAGICKCORE_QUANTUM_DEPTH=16")
   set_property(SOURCE src/utility/imageIO.cpp APPEND_STRING PROPERTY COMPILE_FLAGS " -DMAGICKCORE_HDRI_ENABLE=1")
-  set_property(SOURCE src/cameras/image_film.cpp APPEND_STRING PROPERTY COMPILE_FLAGS " -DIMAGEMAGICK=\\\"${ImageMagick_INCLUDE_DIRS}\\\"")
+  set_property(SOURCE src/cameras/image_film.cpp APPEND_STRING PROPERTY COMPILE_FLAGS " -DIMAGEMAGICK=\\\"${ImageMagick_Magick++_INCLUDE_DIRS}\\\"")
   set_property(SOURCE src/cameras/image_film.cpp APPEND_STRING PROPERTY COMPILE_FLAGS " -DMAGICKCORE_QUANTUM_DEPTH=16")
   set_property(SOURCE src/cameras/image_film.cpp APPEND_STRING PROPERTY COMPILE_FLAGS " -DMAGICKCORE_HDRI_ENABLE=1")
-  include_directories(${ImageMagick_INCLUDE_DIRS})
-  target_link_libraries(spectre-full ${ImageMagick_LIBRARIES})
-  target_link_libraries(spectre-rgb ${ImageMagick_LIBRARIES})
-endif(IMAGEMAGICK_FOUND)
+  include_directories(${ImageMagick_Magick++_INCLUDE_DIRS})
+  target_link_libraries(spectre-full ${ImageMagick_Magick++_LIBRARIES})
+  target_link_libraries(spectre-rgb ${ImageMagick_Magick++_LIBRARIES})
+endif(IMAGEMAGICK_Magick++_FOUND)
 set(CMAKE_VERBOSE_MAKEFILE ON)
 
 find_package(GTest)
@@ -87,6 +87,9 @@ if(GTEST_FOUND)
     target_link_libraries(runTests ${GTEST_BOTH_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
     set_target_properties(runTests PROPERTIES COMPILE_FLAGS " -DTESTS -DDEBUG -DTEST_ASSETS=\\\"${CMAKE_CURRENT_SOURCE_DIR}/tests/assets/\\\"")
 endif(GTEST_FOUND)
+if(IMAGEMAGICK_Magick++_FOUND)
+  target_link_libraries(runTests ${ImageMagick_Magick++_LIBRARIES})
+endif(IMAGEMAGICK_Magick++_FOUND)
 find_package(Gnuplot)
 if(GNUPLOT_FOUND)
     add_executable(distributions_data EXCLUDE_FROM_ALL ${spectre_distributions_sources} ${spectre_core_sources} ${CMAKE_CURRENT_SOURCE_DIR}/tests/distributions/distributions_main.cpp)
