Texture tests + reworked CURRENT_DIR in file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,9 +61,9 @@ target_link_libraries (spectre-rgb ${CMAKE_THREAD_LIBS_INIT})
 
 find_package(ImageMagick COMPONENTS Magick++)
 if(ImageMagick_Magick++_FOUND)
-  set_property(SOURCE src/utility/imageIO.cpp APPEND_STRING PROPERTY COMPILE_FLAGS " -DIMAGEMAGICK=\\\"${ImageMagick_Magick++_INCLUDE_DIRS}\\\"")
-  set_property(SOURCE src/utility/imageIO.cpp APPEND_STRING PROPERTY COMPILE_FLAGS " -DMAGICKCORE_QUANTUM_DEPTH=16")
-  set_property(SOURCE src/utility/imageIO.cpp APPEND_STRING PROPERTY COMPILE_FLAGS " -DMAGICKCORE_HDRI_ENABLE=1")
+  add_definitions(" -DIMAGEMAGICK=\\\"${ImageMagick_Magick++_INCLUDE_DIRS}\\\" ")
+  add_definitions(" -DMAGICKCORE_QUANTUM_DEPTH=16 ")
+  add_definitions(" -DMAGICKCORE_HDRI_ENABLE=1 ")
   include_directories(${ImageMagick_Magick++_INCLUDE_DIRS})
   target_link_libraries(spectre-full ${ImageMagick_Magick++_LIBRARY})
   target_link_libraries(spectre-rgb ${ImageMagick_Magick++_LIBRARY})
@@ -78,7 +78,7 @@ if(GTEST_FOUND)
     include_directories(${GTEST_INCLUDE_DIRS})
     add_executable(runTests EXCLUDE_FROM_ALL ${CMAKE_CURRENT_SOURCE_DIR}/tests/allTests.cxx ${spectre_core_sources} ${spectre_test_sources})
     target_link_libraries(runTests ${GTEST_BOTH_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
-    set_target_properties(runTests PROPERTIES COMPILE_FLAGS " -DTESTS -DDEBUG -DTEST_ASSETS=\\\"${CMAKE_CURRENT_SOURCE_DIR}/tests/assets\\\"")
+    set_target_properties(runTests PROPERTIES COMPILE_FLAGS " -DTESTS -DDEBUG -DTEST_ASSETS=\\\"${CMAKE_CURRENT_SOURCE_DIR}/tests/assets/\\\"")
 endif(GTEST_FOUND)
 if(ImageMagick_Magick++_FOUND)
   target_link_libraries(runTests ${ImageMagick_Magick++_LIBRARY})
