--- a/codecov.yml
+++ b/codecov.yml
@@ -1,4 +1,9 @@
 coverage:
   ignore:
     - "tests/*"
-    - "src/parsers/*"
+    - "src/parsers/lex.yy.cc"
+    - "src/parsers/config.tab.cc"
+    - "src/parsers/config.tab.hh"
+    - "src/parsers/stack.hh"
+    - "src/parsers/location.hh"
+    - "src/parsers/position.hh"
