ObjParser new version
Started the new obj parser, manually written

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,8 @@ file(GLOB spectre_core_sources
     src/materials/*.cpp
     src/parsers/config_parser.tab.cc
     src/parsers/lex.yy.cc
-    src/parsers/config_driver.cpp)
+    src/parsers/config_driver.cpp
+    src/parsers/obj_parser.cpp)
 file(GLOB spectre_test_sources
     tests/*.cpp
     )
