Light parsing, fixed memory leaks

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,6 +88,7 @@ find_package(Gnuplot)
 if(GNUPLOT_FOUND)
     add_executable(distributions_data EXCLUDE_FROM_ALL ${spectre_distributions_sources} ${spectre_core_sources} ${CMAKE_CURRENT_SOURCE_DIR}/tests/distributions/distributions_main.cpp)
     target_compile_definitions(distributions_data PRIVATE SUPPRESS_MOTD=1)
+    TARGET_LINK_LIBRARIES(distributions_data ${CMAKE_THREAD_LIBS_INIT})
 if(ImageMagick_Magick++_FOUND)
   target_link_libraries(distributions_data ${ImageMagick_Magick++_LIBRARY})
 endif(ImageMagick_Magick++_FOUND)
