--- a/codecov.yml
+++ b/codecov.yml
@@ -7,3 +7,5 @@ coverage:
     - "src/parsers/stack.hh"
     - "src/parsers/location.hh"
     - "src/parsers/position.hh"
+    - "src/parsers/config_parser.y"
+    - "src/parsers/config_lexer.l"
